--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "json2csv": "^4.5.4",
     "morgan": "^1.9.1",
     "puppeteer": "^2.1.0"
   },
